[package]
authors = ["Sorah Fukumori <sorah@cookpad.com>"]
edition = "2018"
name = "isuxportal-supervisor"
version = "0.1.0"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.7"
envy = "0.4"
hyper = "0.13"
log = "0.4"
prost = "0.6"
prost-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.3", features = ["tls", "tls-roots"] }
# async-stream = "0.3"
futures-core = "0.3"
nix = "0.18.0"
mio = {version = "0.6"}
tokio-util = {version = "0.3", features = ["codec"]}

[build-dependencies]
tonic-build = "0.3"
