[package]
authors = ["Sorah Fukumori <sorah@cookpad.com>"]
edition = "2021"
name = "isuxportal-supervisor"
version = "0.1.0"
publish = false

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
env_logger = "0.9.0"
envy = "0.4.2"
hyper = "0.14.19"
log = "0.4.17"
prost = "0.10.4"
prost-types = "0.10.1"
serde = { version = "1.0.138", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
# async-stream = "0.3"
#futures-core = "0.3.21"
nix = "0.24.1"
#mio = {version = "0.8.4"}
tokio-util = {version = "0.7.3", features = ["codec"]}
futures = "0.3.21"
tokio-stream = "0.1.9"

[build-dependencies]
tonic-build = "0.7.2"
